Fixed Code component to render a fenced code block without language specification

--- a/src/posts/11-post-number-eleven/post.mdx
+++ b/src/posts/11-post-number-eleven/post.mdx
@@ -14,6 +14,8 @@ videoSourceURL: https://youtu.be/1npWH0rPOnI
 videoTitle: "Deploying Sites to GitHub Pages using GitHub Actions"
 ---
 
+import { Link } from 'gatsby'
+
 # What is Datasette?
 
 # Installation
@@ -218,3 +220,7 @@ Options:
 ```
 $ datasette publish heroku nyctrees.db --title "NYC Trees" --install datasette-cluster-map
 ```
+
+<Link to='/posts' className='btn center-btn'>
+  all posts
+</Link>
