--- a/src/posts/18-post-number-eighteen/post.mdx
+++ b/src/posts/18-post-number-eighteen/post.mdx
@@ -1,18 +1,27 @@
 ---
-title: How To Deploy Gatsby Website to GitHub Pages 
+title: How To Deploy Gatsby Website to GitHub Pages Using GitHub Actions 
 slug: how-to-deploy-gatsby-to-github-pages
 image: ./images/main_gatsby_githubpages.png
 date: 2022-03-16
 author: youngjae lim
 category: Gatsby 
-readTime: 5
+readTime: 30
+embeddedImages:
+  - ./images/github_dev_branch.png
+  - ./images/github_default_branch.png
+  - ./images/github_gh-pages_branch.png
+  - ./images/github_pages.png
+  - ./images/github_actions.png
+  - ./images/package_json.png
+  - ./images/youngjae-lim.github.io.png
 ---
 
 import { Link } from 'gatsby'
+import { GatsbyImage, getImage } from 'gatsby-plugin-image'
 
 ## Overview
 
-This article will help you to publish your gatsby site to github pages .So we can take a look at what each of these technologies are in brief
+This article will help you to publish your gatsby site to github pages using github actions.
 
 ### Gatsby
 
@@ -22,124 +31,148 @@ Gatsby is a react based ,GraphQL powered static site generator . It simply means
 
 GitHub Pages are public webpages hosted and easily published through GitHub.Any static site can be published using gh-pages.You can know more about them here
 
+
+### GitHub Actions
+
+GitHub Actions is a continuous integration and continuous delivery (CI/CD) platform that allows you to automate your build, test, and deployment pipeline. You can create workflows that build and test every pull request to your repository, or deploy merged pull requests to production.
+
 ## Steps
 
-1. Update brew
+### 1. Create a GitHub Respository
+
+  I named my repository `youngjae-lim.github.io`
+
+
+### 2. Initialize git in your local Gatsby project directory
 
   ```
-  $ brew update
+  $ git init
   ```
 
-2. Install zlib sqlite xz installed on your machine
+### 3. Create a branch called `dev` in your local repository and push it to the GitHub remote repository
+
 
   ```
-  $ brew install zlib sqlite xz
+  $ git checkout -b dev
+  $ git status
+  $ git add .
+  $ git commit -m "initial commit to dev branch"
+
+  $ git remote add origin https://github.com/youngjae-lim/youngjae-lim.github.io 
+  $ git push origin dev 
   ```
 
-3. Brew install Pyenv
+  Now that you pushed the local repository to the remote repository, you should be able to see the same project in your GitHub repository:
 
-  ```
-  $ brew install pyenv
-  ```
+  <GatsbyImage image={getImage(props.embeddedImages[0])} alt="github dev branch" />
 
-
-4. Restart the terminal for changes to take effect or run `exec "$SHELL"`
-
-  ```
-  $ exec "$SHELL"
-  ```
-
-5. Add exports to the current terminal window
-
-  <blockquote display="info">
-    The zlib compression algorithm and the SQLite database are dependencies for pyenv and often cause build problems when not configured correctly. Add these exports to your current terminal window to ensure the installation completes:
-  </blockquote>
-
-  ```
-  $ export LDFLAGS="-L/usr/local/opt/zlib/lib -L/usr/local/opt/sqlite/lib"
-  $ export CPPFLAGS="-I/usr/local/opt/zlib/include -I/usr/local/opt/sqlite/include"
-  ```
-
-6. Check out some available versions of python > 3.9.*
-
-  ```
-  $ pyenv install --list | grep 3.9.
-  ```
-
-7. Install python 3.9.4
-
-  It will take some time to finish the installation.
-
-  ```
-  $ pyenv install 3.9.4
-  ```
-
-8. Make 3.9.4 as global python version
-
-  ```
-  $ pyenv global 3.9.4
-  ```
-
-9. Check the version
-
-  ```
-  $ pyenv version
-  ```
-  You should see `3.9.4 (set by /Users/youngjaelim/.pyenv/version)`.
-
-10. Configure `.zshrc`
-
-  <blockquote display="info">
-  The power of pyenv comes from its control over our shell's path. In order for it to work correctly, we need to add the following to our configuration file (.zshrc for me, possibly .bash_profile for you)
+  <blockquote display="warning">  
+  Also make sure that the dev branch is your default branch in settings of your remote repository:
   </blockquote>
   
-  ```
-  $ echo -e 'if command -v pyenv 1>/dev/null 2>&1; then\n eval "$(pyenv init --path)"  eval "$(pyenv init -)"\nfi' >> ~/.zshrc
-  ```
+  <GatsbyImage image={getImage(props.embeddedImages[1])} alt="github default branch" />
 
-11. Check to make sure .zshrc updated
 
-  ```
-  $ cat ~/.zshrc
-  if command -v pyenv 1>/dev/null 2>&1; then
-    eval "$(pyenv init --path)"
-    eval "$(pyenv init -)"
-  fi
-  ```
+### 4. Create a new orphan repository called `gh-pages` to which we will deploy using Github Actions and push it to the remote repository
 
-12. Restart the terminal for changes to take effect or run exec "$SHELL".
-
+  In other words, we will work in `dev` branch locally to develop our website and once we push to the remote repository, it will trigger GitHub Actions that build our Gatsby Website and deploy to `gh-pages` branch automatically. 
+ 
   ```
-  $ exec "$SHELL"
+  $ git checkout --orphan gh-pages
+  $ git rm -rf .
+  $ git commit --allow-empty "initial commit to gh-pages branch"
+  $ git push origin gh-pages
   ```
 
-13. Check python version
+  If you check your remote GitHub repository, you should see an empty repository `gh-pages` created.
+
+### 5. Make your GitHub Pages site is being built from the `gh-pages` branch
+
+  <blockquote display="warning">  
+  As you see in the image below, the `Source` must be set to the branch `gh-pages`.
+  </blockquote>
+
+  <GatsbyImage image={getImage(props.embeddedImages[3])} alt="github default branch for github pages" />
+
+### 6. Create a `GitHub Actions`
+
+  Create a `.github/workflows` directory right under your local project root and create `deploy.yml` like this:
+
+  ```yml
+  # .github/workflows/deploy.yml
+  # This is a basic workflow to help you get started with Actions
+  name: CI
+
+  # Controls when the action will run.
+  on:
+    # Triggers the workflow on push or pull request events but only for the dev branch
+    push:
+      branches: [dev]
+
+    # Allows you to run this workflow manually from the Actions tab
+    workflow_dispatch:
+
+  # A workflow run is made up of one or more jobs that can run sequentially or in parallel
+  jobs:
+    # This workflow contains a single job called "build"
+    build:
+      # The type of runner that the job will run on
+      runs-on: ubuntu-latest
+
+      # Steps represent a sequence of tasks that will be executed as part of the job
+      steps:
+        # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+        - uses: actions/checkout@v2
+
+        - name: Setup Node.js environment
+          uses: actions/setup-node@v2.1.5
+          with:
+            # Version Spec of the version to use.  Examples: 12.x, 10.15.1, >=10.15.0
+            node-version: 16
+        - run: npm ci # Note that this step needs package-lock.json file
+
+        - run: npm run build --if-present
+
+        - run: npm test
+
+        - name: Deploy to GitHub Pages
+          uses: JamesIves/github-pages-deploy-action@v4.2.5
+          with:
+            branch: gh-pages # The branch the action should deploy to.
+            folder: public # The folder the action should deploy.
+  ```
+
+  Before we push this change to the remote repository, we have to make two simple changes:
+  1. Modify `package.json`: 
+  Change the `exit` code 1 in the default `test` script in `package.json` to 0. So your `package.json` should look like this:
+
+  <GatsbyImage image={getImage(props.embeddedImages[5])} alt="package.json" />
+
+  2. Make sure that `package-lock.json` is not included in your `.gitignore` file: the `npm ci` step in `deploy.yml` workflow needs `package-lock.json` file, so it should be able to be pushed to the remote repository. 
+
+  
+Now that we created our deploy GitHub Actions in our local repository, let's push the changes to `dev` branch of the remote GitHub repository. Make sure you are currently working in your local `dev` branch:
 
   ```
-  $ python -V
-  Python 3.9.4
-
-  $ python
-  Python 3.9.4 (default, May 22 2021, 00:50:28) 
-  [Clang 12.0.5 (clang-1205.0.22.9)] on darwin
-  Type "help", "copyright", "credits" or "license" for more information.
-  >>> quit()
+  $ git checkout dev
+  $ git add .
+  $ git commit -m "create a deploy GitHub Actions"
+  $ git push origin dev
   ```
 
-14. Upgrade the pip and setuptools packages
+  This will automatically trigger our Gatsby build script and publish the website to `gh-pages` branch. You can check the real-time build steps from the `Actions` tab in your remote repository:
 
-  ```
-  # To avoid the persistent warning about upgrading the pip package. 
-  # It would be best if you upgrade the pip package.
-  $ pip install -U pip setuptools
+  <GatsbyImage image={getImage(props.embeddedImages[4])} alt="github actions" />
 
-  $ pip list
-  Package    Version
-  ---------- -------
-  pip        21.1.1
-  setuptools 56.2.0
-  $ ~ %
-  ```
+  If the workflow ran successfully, then please switch to the `gh-pages` branch to see if all the production contents are published:
+  
+  <GatsbyImage image={getImage(props.embeddedImages[2])} alt="github gh-pages branch" />
+
+### 7. Test out the Github Pages
+
+Open up your favorite web browser and type your github pages web address. The web address should be something like `https://<your_repository_name>.github.io`. Note that it might take a second to load the github pages if you access it for the first time. 
+  
+  <GatsbyImage image={getImage(props.embeddedImages[6])} alt="github gh-pages branch" />
 
 <Link to='/posts' className='btn center-btn'>
   all posts
