Added custom favicon, a new post, Seo component, About page

--- a/src/posts/18-post-number-eighteen/post.mdx
+++ b/src/posts/18-post-number-eighteen/post.mdx
@@ -29,7 +29,7 @@ Gatsby is a react based ,GraphQL powered static site generator . It simply means
 
 ### GitHub Pages
 
-GitHub Pages are public webpages hosted and easily published through GitHub.Any static site can be published using gh-pages.You can know more about them here
+GitHub Pages are public webpages hosted and easily published through GitHub.
 
 
 ### GitHub Actions
@@ -89,7 +89,7 @@ GitHub Actions is a continuous integration and continuous delivery (CI/CD) platf
 ### 5. Make your GitHub Pages site is being built from the `gh-pages` branch
 
   <blockquote display="warning">  
-  As you see in the image below, the `Source` must be set to the branch `gh-pages`.
+  As you see in the image below, the `Source` must be set to the branch gh-pages.
   </blockquote>
 
   <GatsbyImage image={getImage(props.embeddedImages[3])} alt="github default branch for github pages" />
