--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,8 +1,19 @@
 import { Link } from 'gatsby'
 import { FiInfo } from 'react-icons/fi'
+import { FaEnvelope, FaPhone, FaHome, FaGithub } from 'react-icons/fa'
 import { Counter, LikeButton, RegVideo, Video } from '../components/Complete'
 
 <section class="mdx-page">
+
+# Youngjae Jay Lim
+### Full-Stack Software Engineer/Data Analyst
+
+| Contact        |                                                                    |
+| -------------- | ----------------------------------------------------------------   |
+| <FaEnvelope /> | limyoungjae@gmail.com                                              |
+| <FaPhone />    | 917-733-0790                                                       |
+| <FaHome />     | [https://youngjae-lim.github.io](https://youngjae-lim.github.io)   |
+| <FaGithub />   | [https://github.com/youngjae-lim](https://github.com/youngjae-lim) |
 
 # ✍️Summary
 
@@ -18,7 +29,7 @@ my computer, I am a photographer as well.
 Note: I am authorized to work in US.
 </blockquote>
 
-- My current interests are:
+- My current interests related to web technologies are:
   - Using CMS(Content Management System) as a backend platform
   - Making my own Go Web Framework called `Gosnel`
   - Making SSG(Static Site Generation) efficient
@@ -32,25 +43,90 @@ Note: I am authorized to work in US.
 
 # 📚EDUCATION
 
-| Year | Institution/Degree                         |
-| -----| ------------------------------------------ |
-| 2010 | Columbia University, MS, Actuarial Science |
-| 2009 | Stanford University, MS, Statistics        |
-| 2007 | Korea University, BS, Computer Science     |
+| Year | Institution         | Major             | Degree              |
+| -----| ------------------- |------------------ | ------------------- | 
+| 2010 | Columbia University | Actuarial Science | Master of Science   |
+| 2009 | Stanford University | Statistics        | Master of Science   |
+| 2007 | Korea University    | Computer Science  | Bachelor of Science |
 
 # 💼EXPERIENCE
 
-| Year | Orgnization|
-| -----| ------------------------------------------ |
-| 2010 | - a -b|
-| 2009 | Stanford University, MS, Statistics        |
-| 2007 | Korea University, BS, Computer Science     |
+## 📆2019 - Present
+
+### Freelancing Programmer
+
+- Worked with a variety of differennt programming languages, frameworks, and content manage systems(CMS) such as JavaScript, React, Next.js, Svelte, SvelteKit, Vue, Node.js, Express.js Prismic, WordPress, Contentful, Sanity.io, Strapi
+
+- Developed with Go programming languages to develop REST APIS for movie information,
+- Created a full-stack web E-Commerce application using `Go` that consists of multiple, separate applications:
+  - a front-end which services content to the end user as web pages
+  - a back-end API that is called by the front-end as necessary
+  - microservice that performs only one task, but performs very well, dynamically building PDF invoices and sending them to custormers as an email attachment
+
+### 🔗[Projects](https://youngjae-lim.github.io/projects)
+
+## 📆2011 - 2018
+
+### Actuarial Analyst, MIB Solutions, New York
+
+#### Analytical :
+
+- Worked on Life Statistical Services to assist life insurance companies in complying with mandatory
+mortality experience reporting as required by the state regulators (New York Department of
+Financial Services, Kansas Insurance Department)
+- Took responsibility for doing actuarial analysis and review of 20 data contributors in Life Statistical
+Services
+- Assisted in defining Exact Exposure Formulas depending on the various situations such as inforce,
+death terminations, lapses, non-death, and non-lapse terminations, etc
+- Designed and implemented a Comparison Report to compare the current calendar year mortality
+data to prior year’s data
+- Participated in the SOA Credit Risk Experience Study : Private Placement Bonds
+- Built up solid understanding of relational database, multi-dimensional database, and Star
+Schema from the per:webspective of Business Intelligence Tool
+
+#### Techinical :
+
+- Programmed `Transact-SQL` stored-procedures to automate syntax, validation checks on individual
+life insurance companies’ mortality data
+- Generated various drill-down capable `Excel Pivot Table` reports including A/E Ratio Reports sent
+to companies and state regulators using `Visual Basic .NET` technology
+- Provided underlying aggregate/preferred mortality data from multiple data sources to be used in
+SOA ILEC 09-10 Individual Life Experience Mortality Study
+- Created, updated, and maintained `VBScript` codes to automatically create numerous Excel Pivot
+Table Reports for Life Statistical Services
+- Developed and shared `SQL` codes to summarize each company’s preferred class structure in the
+data to compare it to Preferred Class Structure Questionnaire given by companies
+
+
+#### Interpersonal :
+
+- Played a pivotal role in filling in gaps between actuarial department in NY and IT in MA for implementing
+Exact Exposure Calculations by translating complicated actuarial concepts to easy
+languages for database programmers
+- Communicated with each individual life insurance company contributing mortality data through
+an email, a conference call, and a written memo of actuarial analysis and review
+- Trained other actuarial analysts in COGNOS after taking COGNOS courses
+
+#### Organizational :
+
+- Documented “Detail Data Instructions for NAIC VM-51 Mortality Data Format” containing detailed
+instructions along with numerical examples sent to individual life insurance companies
+- Documented an individual company’s historical mortality data quality following recommended
+practices in Actuarial Standard of Practice No. 23(ASOP 23)
+
+## 📆2010 - 2011
+
+### Actuarial Intern, MIB Solutions, New York
+
+- Provided a variety of underlying tables and views in MS-SQL Server as Syntax, Validation, and Resonableness Checks
+- Generated various summary reports related to individual mortality experience study using Advanced Excel VBA Skill
+- Assisted in conducting various SOA Experience Studies such as Individual Life Mortality, StructuredSettlements, Payout Annuities
 
 # 🖥️SKILL
 
 ## Programming lauguages
 
-`Go`, `GraphQL` `JavaScript`, `HTML`, `CSS`, `Python`, `SQL`, `Rust`, `VBScript`, `VBA`, `PHP`, `R`
+`Go`, `GraphQL` `JavaScript(ES6)`, `HTML`, `CSS`, `Python`, `SQL`, `Rust`, `VBScript`, `VBA`, `PHP`, `R`
 
 ## Libraries & Framewokrs
 
@@ -58,14 +134,15 @@ Note: I am authorized to work in US.
 | ---------- | --------------------------------------------------------------------------- |
 | JavaScript | `React`, `Gatsby`, `Svelte`, `SvelteKit`, `Next.js`, `Node.js`, `Express.js`|
 | Python     | `Django,` `FastAPI`                                                         |
-| Go         | `Gosnel`(framework that I am currently making in progress)                   |
+| Go         | `Gosnel`(framework that I am currently making in progress)                  |
+| CSS        | `Bootstrap`, `Tailwind CSS`, `Semantic UI`                                  |
 
 ## Tools & Platforms
 
 | Category                       | Tools & Platforms |
 | -----------------------        | ------------------------------------------ |
 | Code Editing                   | `Vim`, `VS Code`|
-| Cloud                          | `AWS`, `Google Cloud Platform`, `Digital Ocean`, `Linode`, `Netlify`, `Vercel`, `Gatsby Cloud`, `MongoDB Atlas Cloud`, `Supabase`|
+| Cloud                          | `AWS`, `Google Cloud Platform`, `Heroku`, `Digital Ocean`, `Linode`, `Netlify`, `Vercel`, `Gatsby Cloud`, `MongoDB Atlas Cloud`, `Supabase`|
 | DevOps                         | `Git`, `GitHub`, `Docker`, `Kubernetes`|
 | CMS(Content Management System) | `WordPress`, `Prismic`, `Sanity.io`, `Contentful`, `Strapi`|
 | OS(Operating Systems)          | `Windows`, `Unix`, `Linux`, `MacOS`|
@@ -81,247 +158,11 @@ Note: I am authorized to work in US.
 
 `Figma`
 
+# Activities
 
-# TOOLS
+## 📆2016 - 2021
 
-## This is a mdx file
-
-**I'm baby quinoa kogi green juice messenger bag, brooklyn sartorial la croix letterpress banjo put a bird on it shaman fingerstache taxidermy gastropub poke.** Intelligentsia church-key seitan, everyday carry scenester bushwick brunch narwhal master cleanse cliche austin. Green juice pop-up church-key man bun kitsch stumptown bitters. _Roof party pabst mustache tumeric next level pinterest intelligentsia narwhal salvia af pork belly four loko._
-
-# my heading h1
-
-## my heading h2
-
-### my heading h3
-
-#### my heading h4
-
-### Table
-
-| Period    | Description |
-| --------- | ----------- |
-| Header    | Title       |
-| Paragraph | Text        |
-
-## Blockquote
-
-#### No display props
-
-> Intelligentsia church-key seitan, everyday carry scenester bushwick brunch narwhal master cleanse cliche austin.
-
-#### Info
-
-<blockquote display='info'>
-  Intelligentsia church-key seitan, everyday carry scenester bushwick brunch
-  narwhal master cleanse cliche austin.
-</blockquote>
-
-#### Warning
-
-<blockquote display='warning'>
-  Intelligentsia church-key seitan, everyday carry scenester bushwick brunch
-  narwhal master cleanse cliche austin.
-</blockquote>
-
-#### Default
-
-<blockquote display='default'>
-  Intelligentsia church-key seitan, everyday carry scenester bushwick brunch
-  narwhal master cleanse cliche austin.
-</blockquote>
-
-### List
-
-1. First item
-2. Second item
-3. Third item
-
-- First item
-- Second item
-- Third item
-- First item
-  - Nested item
-
-```
-const firstName = 'youngjae'
-console.log(firstName)
-```
-
-```
-git status
-git add
-git commit
-```
-
-<h2>React Components</h2>
-<Counter />
-
-```jsx
-import React from 'react'
-import styled from 'styled-components'
-import { AiOutlineLike } from 'react-icons/ai'
-const LikeButton = () => {
-  const [value, setValue] = React.useState(0)
-  return (
-    <Wrapper>
-      <div>
-        <button onClick={() => setValue(value + 1)}>
-          <AiOutlineLike />
-        </button>
-        <p>
-          Liked the post?
-          <br />
-          Click thumbs up few times
-        </p>
-      </div>
-      <span>+{value}</span>
-    </Wrapper>
-  )
-}
-```
-
-<LikeButton />
-
-### Video Components
-
-<RegVideo />
-
-<Video />
-
-<h2 title='true'>Random h2 with title props</h2>
-<h2>Another Random h3</h2>
-
-<h4>Inline Code</h4>
-
-`this is a code`
-
-```js
-console.log('hello there')
-```
-
-#### Javascript
-
-```js
-// comments
-const name = 'john'
-const channel = 'coding addict'
-
-function featuredProducts(data) {
-  return data.filter(item => {
-    return item.featured === true
-  })
-}
-featuredProducts()
-```
-
-#### JSX
-
-```jsx
-import React from 'react'
-
-const Counter = () => {
-  const [count, setCount] = React.useState(0)
-  return (
-    <section className='counter'>
-      <h4>show some love to MDX</h4>
-      <h4>likes {count}</h4>
-      <button className='btn btn-danger' onClick={() => setCount(count + 1)}>
-        i like mdx
-      </button>
-    </section>
-  )
-}
-export default Counter
-```
-
-#### HTML
-
-```html
-<h1>hello world</h1>
-<p class="random">random text</p>
-<section class="contact">
-  <div class="title">
-    <h1>contact us</h1>
-  </div>
-</section>
-```
-
-#### CSS
-
-```css
-max-width: 500px;
-border-radius: var(--radius);
-padding: 1rem 1.5rem;
-background: var(--clr-grey-10);
-text-align: center;
-```
-
-# Tables
-
-| First Header                | Second Header                |
-| --------------------------- | ---------------------------- |
-| Content from cell 1         | Content from cell 2          |
-| Content in the first column | Content in the second column |
-
-You can create tables with pipes | and hyphens -. Hyphens are used to create each column's header, while pipes separate each column. You must include a blank line before your table in order for it to correctly render.
-
-| First Header | Second Header |
-| ------------ | ------------- |
-| Content Cell | Content Cell  |
-| Content Cell | Content Cell  |
-
-The pipes on either end of the table are optional.
-
-Cells can vary in width and do not need to be perfectly aligned within columns. There must be at least three hyphens in each column of the header row.
-
-| Command    | Description                                    |
-| ---------- | ---------------------------------------------- |
-| git status | List all new or modified files                 |
-| git diff   | Show file differences that haven't been staged |
-
-You can use formatting such as links, inline code blocks, and text styling within your table:
-
-| Command      | Description                                        |
-| ------------ | -------------------------------------------------- |
-| `git status` | List all _new or modified_ files                   |
-| `git diff`   | Show file differences that **haven't been** staged |
-
-To include a pipe | as content within your cell, use a \ before the pipe:
-
-| Name     | Character |
-| -------- | --------- |
-| Backtick | `         |
-| Pipe     | \|        |
-
-# Math
-
-Lift($L$) can be determined by Lift Coefficient ($C_L$) like the following
-equation.
-
-```
-$$
-L = \frac{1}{2} \rho v^2 S C_L
-$$
-```
-
----
-
-$$
-L = \frac{1}{2} \rho v^2 S C_L
-$$
-
----
-
-
-### Strikethrough
-
-~~The world is flat.~~ We now know that the world is round.
-
-### Task Lists
-
-- [x] Write the press release
-- [ ] Update the website
-- [ ] Contact the media
+### Member, NYC-SPC (New York City Street Photography Collective)
 
 <Link to='/posts' className='btn center-btn'>
   all posts
