Added title meta for each page, brought back main image for each post, updated the post

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -2,6 +2,11 @@ import { Link } from 'gatsby'
 import { FiInfo } from 'react-icons/fi'
 import { FaEnvelope, FaPhone, FaHome, FaGithub } from 'react-icons/fa'
 import { Counter, LikeButton, RegVideo, Video } from '../components/Complete'
+import Seo from '../components/Seo'
+import Layout from '../components/Layout'
+
+<Layout>
+<Seo title='About' />
 
 <section class="mdx-page">
 
@@ -100,12 +105,13 @@ data to compare it to Preferred Class Structure Questionnaire given by companies
 
 #### Interpersonal :
 
+- Managed 3 junior actuarial analysts
 - Played a pivotal role in filling in gaps between actuarial department in NY and IT in MA for implementing
 Exact Exposure Calculations by translating complicated actuarial concepts to easy
 languages for database programmers
 - Communicated with each individual life insurance company contributing mortality data through
 an email, a conference call, and a written memo of actuarial analysis and review
-- Trained other actuarial analysts in COGNOS after taking COGNOS courses
+- Trained other actuarial analysts in COGNOS
 
 #### Organizational :
 
@@ -168,3 +174,4 @@ practices in Actuarial Standard of Practice No. 23(ASOP 23)
   all posts
 </Link>
 </section>
+</Layout>
