--- a/src/posts/19-post-number-nineteen/post.mdx
+++ b/src/posts/19-post-number-nineteen/post.mdx
@@ -30,6 +30,22 @@ $ git branch --verbose | grep ': gone]' | grep -v '\*' | awk '{ print $1; }' | x
 $ git branch
 ```
 
+In case where you merged the feature branch into main branch, but haven't deleted it yet in the remote repository, you can use the following commands to remove the merged branches locally:
+
+```shell
+# Fetch the latest from the git
+$ git fetch
+
+# Check the list of local git branches
+$ git branch
+
+# Delete all local branches that have been merged to main branch, but haven't yet deleted in the remote repository
+$ git branch --merged main | grep -v '^\* main' | xargs -n 1 -r git branch -d
+
+# Check the list of local git branches that remain
+$ git branch
+```
+
 <Link to='/posts' className='btn center-btn'>
   all posts
 </Link>
