Added scroll-margin-top css property in order for table of contents to work properly

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -31,7 +31,7 @@ my computer, I am a photographer as well.
 </blockquote>
 
 <blockquote display="info">
-Note: I am authorized to work in US.
+Note: I am authorized to work in US.(i.e., a permanent resident)
 </blockquote>
 
 - My current interests related to web technologies are:
