--- a/src/posts/16-post-number-sixteen/post.mdx
+++ b/src/posts/16-post-number-sixteen/post.mdx
@@ -18,67 +18,70 @@ import { GatsbyImage, getImage } from 'gatsby-plugin-image'
 
 ## Overview
 
-Svelte kit and the new Tailwindcss just-in-time compiler just got released. Here's a super quick rundown on how to set them up.
+This article will show you how to setup `Tailwind CSS` in a `SvelteKit` project.
 
 ## Steps
-1. Set up the project
+1. Set up the project and install `taliwindcss` and its peer dependencies vis npm.
 
-  ```shell
+  ```
   $ npm init svelte@next sveltekit-demo
   $ cd sveltekit-demo
-  $ npm install -D tailwindcss autoprefixer
+  $ npm install -D tailwindcss postcss autoprefixer
   ```
 
-2. Configure postcss
+2. Generate `tailwind.config.cjs` and `postcss.config.cjs` configuration files
 
-- Create a `postcss.config.cjs` file under the project root directory:
-
-  ```js
-  // postcss.config.cjs
-  module.exports = {
-    plugins: {
-      autoprefixer: {},
-      tailwindcss: {}
-    }
-  }
   ```
-  
-3. Configure tailwind
-  - Create a `tailwind.config.cjs` file to enable the just-in-time compiler and add the correct paths to be [purged](https://tailwindcss.com/docs/optimizing-for-production). You can also run `npx tailwind init`
-
-  ```shell
-  $ npx tailwind init
+  $ npx tailwind init tailwind.config.cjs -p
+  $ mv postcss.config.js postcss.config.cjs
   ```
+
+3. Configure your template paths in `tailwind.config.`
 
   ```js
   // tailwind.config.cjs
   module.exports = {
-    mode: 'jit',
-    purge: ['./src/**/*.svelte']
+    content: ['./src/**/*.{html,js,svelte,ts}'],
+  theme: {
+    extend: {}
   }
   ```
 
-4. Create and import the css file
-  - Add these tags in the `__layout.svelte` so that postcss knows where to insert the tailwind styles.
+4. Add the Tailwind directives to your CSS
+  - Create a `./src/app.css` file and add the `@tailwind` directives for each of Tailwind's layers.
 
-  ```svelte
-  // src/routes/__layout.svelte 
-  <script>
-	  import Nav from '../components/nav.svelte';
-  </script>
-
-  <div class="p-8 max-w-6xl mx-auto">
-    <Nav />
-    <slot />
-  </div>
-
-  <style>
-    @tailwind base;
-    @tailwind components;
-    @tailwind utilities;
-  </style>
+  ```css
+  @tailwind base;
+  @tailwind components;
+  @tailwind utilities;
   ```
    
+5. Import the CSS file
+  - Create a `./src/routes/__layout.svelte` file and import the `app.css` file we've just created in the step 4.
+
+  ```svelte
+  <script>
+    import "../app.css"
+  </script>
+
+  <slot />
+  ```
+
+6. Run npm development
+
+  ```
+  $ npm run dev
+  ```
+
+7. Try using Tailwind
+- Open up `index.svelte` and try this.
+
+  ```svlete
+  <h1 class="font-bold underline">
+    Hello Tailwind!!!
+  </h1>
+  ```
+  
 <Link to='/posts' className='btn center-btn'>
   all posts
 </Link>
