Modified Seo component to render social cards properly, also added ExternalLink component to treat an external link in mdx file

--- a/src/posts/16-post-number-sixteen/post.mdx
+++ b/src/posts/16-post-number-sixteen/post.mdx
@@ -1,5 +1,5 @@
 ---
-title: How To Set Up Tailwind CSS(jit) with the SvelteKit 
+title: How To Set Up Tailwind CSS with the SvelteKit 
 slug: how-to-setup-tailwind-sveltekit 
 image: ./images/main_tailwind_svelte.png
 date: 2021-06-24
