Updated metadata for Seo, the about page

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -23,11 +23,9 @@ import Layout from '../components/Layout'
 # ✍️Summary
 
 <blockquote display='default'>
-I am an senior data analyst as well as a full stack developer from NYC
+I am a full stack software engineer as well as a data analyst from NYC
 who is seeking remote/freelancing/full-time opportunities. I am
-passionate about collecting, processing, exploring, and publishing data
-and building anything involving modern web technology. When I am not at
-my computer, I am a photographer as well.
+passionate about building full-stack applications using variety of tools as well as collecting, processing, exploring, and publishing data and building anything involving modern web technology. When I am not at my computer, I am a photographer as well.
 </blockquote>
 
 <blockquote display="info">
@@ -36,14 +34,16 @@ Note: I am authorized to work in US.(i.e., a permanent resident)
 
 - My current interests related to web technologies are:
   - Using CMS(Content Management System) as a backend platform
-  - Making my own Go Web Framework called `Gosnel`
+  - Improving and documenting my own Go Web Framework called `Gosnel`
   - Making SSG(Static Site Generation) efficient
   - Learning SSR(Server-Side Rendering) using SvelteKit
   - Building microservices using Go and gRPC
   - Container orchestration using Kubernetes & AWS EKS
   - Using Github and GitHub Actions as Serverless platform
+    - this website itself is being hosted in Github Pages using Github Actions following `CI/CD` practice
   - Learning Datasette as data exploring, publishing tool
   - Improving PKM(Personal Knowledge Management) system using Roam Research 
+  - Learning Rust programming language as a back-end tool
 
 
 # 📚EDUCATION
@@ -60,13 +60,22 @@ Note: I am authorized to work in US.(i.e., a permanent resident)
 
 ### Freelancing Programmer
 
-- Worked with a variety of differennt programming languages, frameworks, and content manage systems(CMS) such as JavaScript, React, Next.js, Svelte, SvelteKit, Vue, Node.js, Express.js Prismic, WordPress, Contentful, Sanity.io, Strapi
+- Worked with a variety of different programming languages, frameworks, and content manage systems(`CMS`) such as JavaScript, React, Next.js, Svelte, SvelteKit, Vue, Node.js, Express.js Prismic, WordPress, Contentful, Sanity.io, Strapi
 
-- Developed with Go programming languages to develop REST APIS for movie information,
-- Created a full-stack web E-Commerce application using `Go` that consists of multiple, separate applications:
-  - a front-end which services content to the end user as web pages
-  - a back-end API that is called by the front-end as necessary
+- Built  Back-end APIs following `RESTful` standards `Express.js` & `MongoDB Atalas Cloud` to allow users to create job applications that they applied and keep track of them using `useReducer` hooks + `Context` in `React` instead of `Redux`
+
+- Developed a full-stack web application to create/manage events using `Next.js` and `Strapi` CMS backend
+
+- Developed a front-end E-commerce website using both `Gatsby` & `Vue.js` and connected it to `Shopify` back-end service 
+
+- Built a front-end static website using `Gatsby` and `Prismic CMS` as a backend
+
+- Created a full-stack web E-Commerce application using `Go` & `Stripe` that consists of multiple, separate applications:
+  - a virtual terminal whose authenciated user is able to process credit card payments from a secure form with the `Stripe` API
+  - a front-end web application that allows a user to purchase a product, or purchase a recurring monthly subscription
   - microservice that performs only one task, but performs very well, dynamically building PDF invoices and sending them to custormers as an email attachment
+
+- Built a `Gosnel` web framework using `Go` programming language that is very similar to Laravel PHP Web Framework to speed up full-stack web application development process for future clients
 
 ### 🔗[Projects](https://youngjae-lim.github.io/projects)
 
