Changed font family to Overpass and Fira Mono, updated TableOfContents component, Improved css style for external link

--- a/src/projects/Project_01/project.mdx
+++ b/src/projects/Project_01/project.mdx
@@ -22,7 +22,7 @@ URL Shortener allows to reduce long links from any social media such as Instagra
 
 ### Github Repository
 
-💁 [Source](https://github.com/youngjae-lim/url-shortener)
+[Source](https://github.com/youngjae-lim/url-shortener)
 
 <Link to='/projects' className='btn center-btn'>
   all projects
