--- a/src/projects/Project_02/project.mdx
+++ b/src/projects/Project_02/project.mdx
@@ -16,14 +16,10 @@ This is a website that allows you to find/search for music events. You can also 
 
 ### Demo Website
 
-- <Link to='https://nextjsmusiceventsfrontend.vercel.app/' className='btn'>
- Front-end Demo
-</Link>
+- [Font-end Demo](https://nextjsmusiceventsfrontend.vercel.app/)
+- [Back-end Admin Panel With Strapi Demo](https://nextjs-music-events-backend.herokuapp.com/admin/auth/login)
 
-- <Link to='https://nextjs-music-events-backend.herokuapp.com/admin/auth/login' className='btn'>
- Back-end Admin Panel with Strapi CMS Demo
-</Link> 
-  : Note that this is an admin only website that requires login credentials.
+Note that back-end demo is an admin only website that requires login credentials. Also note that it might take a while to load a landing page when you visit the website for the first time due to the fact that the app was deployed to the heroku platform. Once the landing page is loaded, you must experience the fast loading speed for any web pages.
 
 ### Stack
 
@@ -38,7 +34,7 @@ This is a website that allows you to find/search for music events. You can also 
 
 ### Github Repository
 
-💁 [Source](https://github.com/youngjae-lim/nextjs-music-events-frontend)
+[Source](https://github.com/youngjae-lim/nextjs-music-events-frontend)
 
 <Link to='/projects' className='btn center-btn'>
   all projects
