--- a/src/projects/Project_03/project.mdx
+++ b/src/projects/Project_03/project.mdx
@@ -18,9 +18,7 @@ This is a full-stack web application that allows a user to create, save, delete,
 
 Note that it might take a while to load a landing page when you visit the website for the first time due to the fact that the app was deployed to the heroku platform. Once the landing page is loaded, you must experience the fast loading speed for any web pages.
 
-<Link to='https://jobtrak-prod.herokuapp.com/' className='btn'>
- Demo
-</Link>
+[Demo](https://jobtrak-prod.herokuapp.com/)
 
 ### Stack
 
@@ -33,7 +31,7 @@ Note that it might take a while to load a landing page when you visit the websit
 
 ### Github Repository
 
-💁 [Source](https://github.com/youngjae-lim/mern-stack-jobtrak)
+[Source](https://github.com/youngjae-lim/mern-stack-jobtrak)
 
 <Link to='/projects' className='btn center-btn'>
   all projects
