--- a/src/projects/Project_05/project.mdx
+++ b/src/projects/Project_05/project.mdx
@@ -35,7 +35,7 @@ Gosnel is an web application framework like Laravel in the PHP. It features:
 
 ### Github Repository
 
-💁 [Source](https://github.com/youngjae-lim/gosnel)
+[Source](https://github.com/youngjae-lim/gosnel)
 
 <Link to='/projects' className='btn center-btn'>
   all projects
