--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -23,7 +23,7 @@ import Layout from '../components/Layout'
 # ✍️Summary
 
 <blockquote display='default'>
-I am a full stack software engineer as well as a data analyst from NYC
+I am a full stack software engineer as well as a data analyst in NYC
 who is seeking remote/freelancing/full-time opportunities. I am
 passionate about building full-stack applications using variety of tools as well as collecting, processing, exploring, and publishing data and building anything involving modern web technology. When I am not at my computer, I am a photographer as well.
 </blockquote>
@@ -33,17 +33,18 @@ Note: I am authorized to work in US.(i.e., a permanent resident)
 </blockquote>
 
 - My current interests related to web technologies are:
-  - Using CMS(Content Management System) as a backend platform
+  - Using `CMS(Content Management System)` as a backend platform
   - Improving and documenting my own Go Web Framework called `Gosnel`
-  - Making SSG(Static Site Generation) efficient
-  - Learning SSR(Server-Side Rendering) using SvelteKit
-  - Building microservices using Go and gRPC
-  - Container orchestration using Kubernetes & AWS EKS
+  - Making **SSG(Static Site Generation)** efficient
+  - Learning **SSR(Server-Side Rendering)** using `SvelteKit`
+  - Building microservices using `Go` and `gRPC`
+  - Container orchestration using `Kubernetes` & `AWS EKS`
   - Using Github and GitHub Actions as Serverless platform
-    - this website itself is being hosted in Github Pages using Github Actions following `CI/CD` practice
-  - Learning Datasette as data exploring, publishing tool
-  - Improving PKM(Personal Knowledge Management) system using Roam Research 
-  - Learning Rust programming language as a back-end tool
+    - __This website itself is being hosted in Github Pages using Github Actions following `CI/CD` practice__
+  - Learning `Datasette` as data exploring, publishing tool
+  - Improving PKM(Personal Knowledge Management) system using **Roam Research** 
+  - Learning `Rust` programming language as a back-end tool
+  - Architecturing CSS
 
 
 # 📚EDUCATION
@@ -100,27 +101,30 @@ Schema from the per:webspective of Business Intelligence Tool
 
 #### Techinical :
 
-- Programmed `Transact-SQL` stored-procedures to automate syntax, validation checks on individual
+- Managed a team consisting of database developers, actuaries to build a full-stack life insurance compliance reporting-system 
+  - Programmed `Transact-SQL` stored-procedures to automate syntax, validation checks on individual
 life insurance companies’ mortality data
-- Generated various drill-down capable `Excel Pivot Table` reports including A/E Ratio Reports sent
+  - Generated various drill-down capable `Excel Pivot Table` reports including A/E Ratio Reports sent
+  - Created, updated, and maintained `VBScript` codes to automatically create numerous Excel Pivot
 to companies and state regulators using `Visual Basic .NET` technology
+  - Optimized MS SQL Server query performance to deal with a high volume of data from big insurance companies
 - Provided underlying aggregate/preferred mortality data from multiple data sources to be used in
 SOA ILEC 09-10 Individual Life Experience Mortality Study
-- Created, updated, and maintained `VBScript` codes to automatically create numerous Excel Pivot
 Table Reports for Life Statistical Services
 - Developed and shared `SQL` codes to summarize each company’s preferred class structure in the
 data to compare it to Preferred Class Structure Questionnaire given by companies
+- Built `COGNOS` analytical reports called **Critical Review Forms** for actuaries that saved hundreds of hours a month from doing manual data analysis 
 
 
 #### Interpersonal :
 
 - Managed 3 junior actuarial analysts
-- Played a pivotal role in filling in gaps between actuarial department in NY and IT in MA for implementing
+- Played a pivotal role in filling in gaps between actuarial department in NY and developer team in MA for implementing
 Exact Exposure Calculations by translating complicated actuarial concepts to easy
 languages for database programmers
 - Communicated with each individual life insurance company contributing mortality data through
 an email, a conference call, and a written memo of actuarial analysis and review
-- Trained other actuarial analysts in COGNOS
+- Trained other actuarial analysts in `COGNOS` IBM business Intelligence tool
 
 #### Organizational :
 
@@ -148,7 +152,7 @@ practices in Actuarial Standard of Practice No. 23(ASOP 23)
 | Language   | Frameworks                                                                  |
 | ---------- | --------------------------------------------------------------------------- |
 | JavaScript | `React`, `Gatsby`, `Svelte`, `SvelteKit`, `Next.js`, `Node.js`, `Express.js`|
-| Python     | `Django,` `FastAPI`                                                         |
+| Python     | `Django`, `FastAPI`                                                         |
 | Go         | `Gosnel`(framework that I am currently making in progress)                  |
 | CSS        | `Bootstrap`, `Tailwind CSS`, `Semantic UI`                                  |
 
